# nanoGPT

./: pyproject.toml
config/: train_shakespeare_char.py
